fix: horizontal screen for google recaptcha

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -10,6 +10,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -22,6 +23,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
   /* Performance optimizations */
   transform: translateZ(0);
   backface-visibility: hidden;
